--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory_ifdef(CONFIG_AT_CMD_PARSER at_cmd_parser)
 add_subdirectory_ifdef(CONFIG_MODEM_INFO modem_info)
 add_subdirectory_ifdef(CONFIG_PDN_MANAGEMENT pdn_management)
 add_subdirectory_ifdef(CONFIG_MULTITHREADING_LOCK multithreading_lock)
+add_subdirectory_ifdef(CONFIG_NRF_INBUILT_KEY nrf_inbuilt_key)
