--- a/samples/nrf9160/lwm2m_client/prj.conf
+++ b/samples/nrf9160/lwm2m_client/prj.conf
@@ -36,6 +36,9 @@ CONFIG_LWM2M_IPSO_ACCELEROMETER=y
 CONFIG_LWM2M_DTLS_SUPPORT=y
 CONFIG_LWM2M_PEER_PORT=5684
 
+# nRF9160 helper libraries
+CONFIG_NRF_INBUILT_KEY=y
+
 # MBEDTLS settings
 CONFIG_MBEDTLS_CIPHER_CCM_ENABLED=y
 # Disable RSA, we don't parse certs: saves flash/memory
